# screen-recorder

./: .gitignore  README.md  pyproject.toml  run.py  screen-recorder.spec
src/screen_recorder/: __init__.py  __main__.py  assets.py  capture.py  config.py  encoder.py  estimate.py  gui.py  monitor_flash.py  monitors.py  processing.py  recorder.py  region.py  region_border.py  windows_enum.py
tests/: conftest.py  test_config.py  test_e2e.py  test_estimate.py  test_gui_state.py  test_monitors.py  test_processing.py  test_region_mapping.py
tools/: install_shortcut.ps1  make_icon.py
