[project]
name = "screen-recorder"
version = "0.1.0"
description = "Windows screen recorder GUI (region/window/monitor, adjustable resolution & fps, visually-lossless H.264)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "windows-capture>=1.4.0",
    "imageio-ffmpeg>=0.5.1",
    "opencv-python>=4.10.0",
    "pyside6>=6.7.0",
    "numpy>=1.26.0",
]

[project.scripts]
screen-recorder = "screen_recorder.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: slow end-to-end tests that perform a real screen recording (deselect with '-m \"not e2e\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screen_recorder"]
artifacts = ["src/screen_recorder/assets/*"]
